5. ingress/4. Ingressess/ingress-resource-without-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyderabad-deploy-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.ch-ms.co.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hyderabad-deploy
            port:
              number: 8000
